--- a/src/components/Expenses/ExpenseDate.css
+++ b/src/components/Expenses/ExpenseDate.css
@@ -2,7 +2,7 @@
   text-align: center;
   font-weight: bold;
   color: white;
-  background-color: rgb(15,15,15);;
+  background-color: rgb(15, 15, 15);
   border: 1px solid white;
   padding: 1rem;
 }
