--- a/src/components/Expenses/ExpenseItem.css
+++ b/src/components/Expenses/ExpenseItem.css
@@ -4,7 +4,7 @@
   align-items: center;
   padding: 0.5rem;
   margin: 1rem 0;
-  background-color: rgb(50,50,50);
+  background-color: rgb(50, 50, 50);
 }
 
 .expense-item__description {
