--- a/src/components/Expenses/Expenses.css
+++ b/src/components/Expenses/Expenses.css
@@ -1,6 +1,6 @@
 .expenses {
   padding: 1rem;
-  background-color: rgb(15,15,15);
+  background-color: rgb(15, 15, 15);
   margin: 2rem auto;
   width: 50rem;
   max-width: 95%;
