--- a/src/components/Expenses/Expenses.css
+++ b/src/components/Expenses/Expenses.css
@@ -1,5 +1,8 @@
 .expenses {
   padding: 1rem;
+  color: white;
+  font-size: 1rem;
+  text-align: center;
   background-color: rgb(15, 15, 15);
   margin: 2rem auto;
   width: 50rem;
