--- a/src/components/NewExpense/ExpenseForm.css
+++ b/src/components/NewExpense/ExpenseForm.css
@@ -1,8 +1,8 @@
 .new-expense__controls {
   display: flex;
   flex-wrap: wrap;
-  gap: 1rem;
-  margin-bottom: 1rem;
+  gap: 15%;
+  margin-bottom: 2rem;
   text-align: left;
 }
 
@@ -23,8 +23,4 @@
 
 .new-expense__actions {
   text-align: right;
-}
-
-.new-expense__actions button {
-  margin: auto;
 }
